--- a/index.html
+++ b/index.html
@@ -7,62 +7,182 @@
 		<link rel="stylesheet" href="css/default.css" />
 		<link rel="stylesheet" href="css/style.css" />
 		<!-- CSS-файл :: начало -->
-			<link rel="stylesheet" href="css/article.css" />
+			<link rel="stylesheet" href="css/article2.css" />
 		<!-- CSS-файл :: конец -->
 	</head>
 	<body>
 		<div class="base">
-		<!-- HTML-код :: начало  -->
+			<img class="main_picture" src="img/fourseasons.jpg" alt="Четыре времени года">
+			<div class="content">
+				<h1>Интерьер по временам года</h1>
+				<p id="preamble">Даже продуманный до мелочей интерьер
+					со временем надоедает. Постоянно перекрашивать стены/менять
+					обои/делать перестановку – утомительно. Но есть отличный
+					вариант, как с минимальными тратами денег и сил
+					разнообразить интерьер – нужно простоизменять его
+					в зависимости от времени года. Чтобы получить великолепный
+					результат, предлагаем воспользоваться несколькими советами.</p>
 
-			<img src="img/picture.jpg" alt="журнальный стол со стеклом" />
-			<div>
-				<h1>Незаметный или незаменимый? Несколько слов о том, как купить пуф и как вписать его в интерьер</h1>
-				<p class="preamble">Пуф – казалось бы, совсем не обязательный предмет интерьера.
-				Но это лишь на первый взгляд, ведь со вкусом подобранный пуф выполняет очень важные функции.
-				Он прекрасно дополняет пространство, делает его более гармоничным и завершенным.
-				Но главное – он привносит в дом атмосферу комфорта и уюта: пуф в прихожей как будто приглашает отдохнуть после долгой дороги,
-				а изящный пуф перед туалетным столиком в спальне настраивает на интимный лад.</p>
-				<p>Особенно актуален пуф в помещениях, оформленных в стиле барокко или ар-деко, – там, где приветствуется особая роскошь
-				и обилие пышных декоративных элементов. Его украшают ручной резьбой, обивкой из дорогостоящих материалов,
-				деталями из ценных пород дерева – и он становится не просто аксессуаром, а настоящим произведением мебельного искусства,
-				достойным аристократических интерьеров.
-				Правда, при выборе пуфа и его размещении следует придерживаться нескольких несложных рекомендаций.</p>
-				<div>
-					<div>
-						<img src="img/living-room.png" alt="Пуф в гостиной" />
+				<div class="season_title_group">
+					<h2 class="season_title spring">Весна</h2>
+					<div class="season_imgbox">
+						<img src="img/spring.jpg" alt="Spring">
 					</div>
-					<span>Пуф в гостиной</span>
-					<p>Для гостиной предпочтительнее купить пуф в комплекте с основной мебелью, выдержанном в едином стиле.
-					Такой пуф может быть отдельно стоящим – тогда его можно расположить в углу, у окна или рядом с диваном и креслами
-					в качестве дополнительного сидячего места. В этом случае высота сиденья пуфа должна быть такой же, как и у других предметов мебели, –
-					с тем чтобы все собравшиеся сидели на одном уровне.</p>
-					<p>Нередко в комплектах встречаются более низкие пуфы – их используют как удобную подставку для ног.
-					Их можно даже установить в центре диванной зоны, на месте журнального столика.</p>
 				</div>
-				<div>
-					<div>
-						<img src="img/entrance-hall.png" alt="Пуф в прихожей" />
+					<p>В весеннем интерьере преобладают теплые цвета, наилучшим
+						фоном для всего станет желтый. Отдавать предпочтение стоит
+						 насыщенным и ярким оттенткам. веь именно весной природа
+						 просыпается после долгой зимней спячки.</p>
+					<div class="season_examples">
+						<div class="season_examples_item">
+							<img src="img/spr_window.png">
+							<span class="season_examples_name">Воздушный </br>тюль</span>
+						</div>
+						<div class="season_examples_item">
+							<img src="img/spr_pillow.png">
+							<span class="season_examples_name">цветочные принты</br> на наволочках</span>
+						</div>
+						<div class="season_examples_item">
+							<img src="img/spr_green.png">
+							<span class="season_examples_name">напольное покрытие цвета мха</span>
+						</div>
+						<div class="season_examples_item">
+							<img src="img/spr_firstflower.png">
+							<span class="season_examples_name">Первоцветы </br>в вазе</span>
+						</div>
 					</div>
-					<span>Пуф в прихожей</span>
-					<p>В прихожей будет уместен как небольшой пуф, так и пуф-кресло со спинкой и поручнями, рассчитанный на двух и более человек.
-					Его можно подобрать в том же стилевом решении, что и остальную мебель, или же без оглядки на нее – в этом случае пуф станет ярким акцентом,
-					подчеркивающим гостеприимство хозяев.</p>
-				</div>
-				<div>
-					<div>
-						<img src="img/bedroom.png" alt="Пуф в спальне" />
-					</div>
-					<span>Пуф в спальне</span>
-					<p>Мягкий элегантный пуфик, обитый бархатом или велюром, будет удачно смотреться у туалетного столика, зеркала или рядом с кроватью.
-					Он подчеркнет общее настроение комфорта и релакса, а также поможет создать интимный уголок для хозяйки дома,
-					наполнив его изысканной роскошью. Перед тем как купить пуф в спальню, не забудьте проверить,
-					насколько удобно на нем сидеть (в плане высоты, мягкости, устойчивости и пр.).</p>
-				</div>
-				<p>Также пуфы широко используются в детских комнатах или на кухне,
-				в этом случае выбор их основывается на соображениях практичности и безопасности.</p>
-			</div>
+					<p>На смену тяжелым портьерам должен прийти воздушный тюль.
+						На шторах будет уместна растительная тематика. В дополнение
+						к оконному текстилю следует заменить наволочки на диванных
+						подушках и теплое покрывало на более легкое с цветочным
+						принтом. И еще одно правило сезонного интерьера — соответствовать
+						времени года должно и напольное покрытие, идеально для весны
+						подойдет палас цвета мха.</p>
+					<p>Завершающим штрихом станут картины с весенними пейзажами,
+						первоцветы в вазе на деревянном журнальном столе и фарфоровые
+						статуэтки.</p>
 
-		<!-- HTML-код :: конец -->
+				 <div class="season_title_group">
+					 <h2 class="season_title summer">Лето</h2>
+					 <div class="season_imgbox">
+						 <img src="img/summer.jpg" alt="Summer">
+						</div>
+					</div>
+					 <p>Каким бы удивительным это не показалось, но для летнего
+						 интерьера стоит подбирать холодные цвета с преобладанием
+						 синего. Органично дополнят палитру пастельные оттенки
+						 зеленого и коричневого.</p>
+					 <div class="season_examples">
+						 <div class="season_examples_item">
+							 <img src="img/sum_pot.png">
+							 <span class="season_examples_name">Глянцевая </br>фактура</span>
+						 </div>
+						 <div class="season_examples_item">
+							 <img src="img/sum_curtain.png">
+							 <span class="season_examples_name">Шелковые или </br>сатиновые портьеры</span>
+						 </div>
+						 <div class="season_examples_item">
+							 <img src="img/sum_pot.png">
+							 <span class="season_examples_name">Ракушки</span>
+						 </div>
+						 <div class="season_examples_item">
+							 <img src="img/sum_house.png">
+							 <span class="season_examples_name">Летние </br>пейзажи</span>
+						 </div>
+					 </div>
+					 <p>Если весной популярны матовые фактуры, то летом можно
+						 поэкспериментировать с глянцем. При этом речь идет не
+						 только о фасадах спального гарнитура, но и текстиле. Идеально
+							украсить окна шелковыми или сатиновыми портьерами, сшить из
+							 этого же материала наволочки для подушек на диване и т. п.</p>
+					 <p>И конечно же, не забывайте об аксессуарах. В летний интерьер
+							хорошо впишутся ракушки, привезенные с моря, песочные
+							композиции, произведения искусств с соответствующими
+							 пейзажами.</p>
+
+					<div class="season_title_group">
+						<h2 class="season_title autumn">Осень</h2>
+						<div class="season_imgbox">
+							<img src="img/autumn.jpg" alt="Autumn">
+							</div>
+						</div>
+						<p>Осенний интерьер многие признают самым уютным. Такую атмосферу
+							создает палитра с преобладанием спокойных, немного приглушенных
+							 оттенков коричневого, красного и желтого.</p>
+						<div class="season_examples">
+							<div class="season_examples_item">
+								<img src="img/aut_fabric.png">
+								<span class="season_examples_name">Парча цвета </br>марсала</span>
+							</div>
+							<div class="season_examples_item">
+								<img src="img/aut_carpet.png">
+								<span class="season_examples_name">Теплый ковер </br>в коричневых оттенках</span>
+							</div>
+							<div class="season_examples_item">
+								<img src="img/aut_fruit.png">
+								<span class="season_examples_name">Спелые </br>фрукты</span>
+							</div>
+							<div class="season_examples_item">
+								<img src="img/aut_bridge.png">
+								<span class="season_examples_name">Осенние </br>пейзажи</span>
+							</div>
+						</div>
+						<p>Текстиль становится тяжелее – легкие льняные портьеры стоит
+							заменить парчовыми, например, цвета марсала. Летнюю циновку
+							 на полу также придется убрать до прихода следующего тепла,
+							 а вместо нее положить теплый ковер, желательно, в коричневых
+								оттенках.</p>
+						<p>Толику уюта привнесут и аксессуары – живые цветы в вазе
+							на тумбе возле телевизора, спелые фрукты в корзине на кухне,
+							 картины с осенними пейзажами и т. д.</p>
+
+					 <div class="season_title_group">
+						 <h2 class="season_title winter">Зима</h2>
+						 <div class="season_imgbox">
+							 <img src="img/winter.jpg" alt="Winter">
+								</div>
+							</div>
+						 <p>Ни в коем случае не стоит полагать, что зимний интерьер
+							 скучный. Напротив, зиму дизайнеры по праву считают самым
+							 контрастным сезоном. Вот почему декорируя помещение к приходу
+							 холодов можно не ограничивать себя ни в выборе цветов, ни
+							 в подборе текстиля и аксессуаров.</p>
+						 <p>Доминирующим цветом в отделке, естественно, должен быть
+								синий, который отлично сочетается с белым и серебристым.</p>
+						 <div class="season_examples">
+							 <div class="season_examples_item">
+								 <img src="img/win_armchair.png" alt="Winter">
+								 <span class="season_examples_name">Синие портьеры</span>
+							 </div>
+							 <div class="season_examples_item">
+								 <img src="img/win_carpet.png">
+								 <span class="season_examples_name">Пушистый ковер, имитация шкур животных</span>
+							 </div>
+							 <div class="season_examples_item">
+								 <img src="img/win_knit.png">
+								 <span class="season_examples_name">Вязаные </br>покрывала</span>
+							 </div>
+							 <div class="season_examples_item">
+								 <img src="img/win_fire.png">
+								 <span class="season_examples_name">Фальшь-камин</span>
+							 </div>
+						 </div>
+						 <p>В комнате могут появиться синие портьеры, при этом они могут
+							 быть как блестящими, словно лед, так и матовыми. Идеальным
+							 напольным покрытием станет пушистый ковер, при этом можно
+							 отдать предпочтение белому цвету, или имитация шкур животных.
+							 Подойдут для создания зимнего интерьера вязаные покрывала и
+							 меховые подушки.</p>
+						 <p>Что касается аксессуаров, то лучше всего если они будут
+							 из стекла, хрусталя и серебра, словно созданные изо льда.
+							 Ну а чтобы «не замерзнуть» в столь ледяном интерьере, украсьте
+							 его свечами и фальшь-камином.</p>
+							 <p class="postscriptum">Для создания гармоничного интерьера
+								 в соответствии с сезоном нужно проявить лишь немного
+								 внимательности, и тогда вы поймете, что сама природа диктует
+								 правила. Взгляните, какие цвета преобладают за окном, какие
+								 текстуры, и творите, отталкиваясь от этого!</p>
+				 </div>
 		</div>
 	</body>
 </html>
