--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							 </div>
 							 <div class="season_examples_item">
 								 <img src="img/win_fire.png">
-								 <span class="season_examples_name">Фальшь-камин</span>
+								 <span class="season_examples_name">Фальш-камин</span>
 							 </div>
 						 </div>
 						 <p>В комнате могут появиться синие портьеры, при этом они могут
@@ -176,7 +176,7 @@
 						 <p>Что касается аксессуаров, то лучше всего если они будут
 							 из стекла, хрусталя и серебра, словно созданные изо льда.
 							 Ну а чтобы «не замерзнуть» в столь ледяном интерьере, украсьте
-							 его свечами и фальшь-камином.</p>
+							 его свечами и фальш-камином.</p>
 							 <p class="postscriptum">Для создания гармоничного интерьера
 								 в соответствии с сезоном нужно проявить лишь немного
 								 внимательности, и тогда вы поймете, что сама природа диктует
