--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
 						 просыпается после долгой зимней спячки.</p>
 					<div class="season_examples">
 						<div class="season_examples_item">
-							<img src="img/spr_window.png">
-							<span class="season_examples_name">Воздушный </br>тюль</span>
+							<img src="img/spr_window.png" alt="Тюль">
+							<span class="season_examples_name">Воздушный <br>тюль</span>
 						</div>
 						<div class="season_examples_item">
-							<img src="img/spr_pillow.png">
-							<span class="season_examples_name">цветочные принты</br> на наволочках</span>
+							<img src="img/spr_pillow.png" alt="Принты">
+							<span class="season_examples_name">цветочные принты<br> на наволочках</span>
 						</div>
 						<div class="season_examples_item">
-							<img src="img/spr_green.png">
+							<img src="img/spr_green.png" alt="Зелень">
 							<span class="season_examples_name">напольное покрытие цвета мха</span>
 						</div>
 						<div class="season_examples_item">
-							<img src="img/spr_firstflower.png">
-							<span class="season_examples_name">Первоцветы </br>в вазе</span>
+							<img src="img/spr_firstflower.png" alt="Первоцвет">
+							<span class="season_examples_name">Первоцветы <br>в вазе</span>
 						</div>
 					</div>
 					<p>На смену тяжелым портьерам должен прийти воздушный тюль.
@@ -74,20 +74,20 @@
 						 зеленого и коричневого.</p>
 					 <div class="season_examples">
 						 <div class="season_examples_item">
-							 <img src="img/sum_pot.png">
-							 <span class="season_examples_name">Глянцевая </br>фактура</span>
+							 <img src="img/sum_glace.png" alt="Глянец">
+							 <span class="season_examples_name">Глянцевая <br>фактура</span>
 						 </div>
 						 <div class="season_examples_item">
-							 <img src="img/sum_curtain.png">
-							 <span class="season_examples_name">Шелковые или </br>сатиновые портьеры</span>
+							 <img src="img/sum_curtain.png" alt="Портьеры">
+							 <span class="season_examples_name">Шелковые или <br>сатиновые портьеры</span>
 						 </div>
 						 <div class="season_examples_item">
-							 <img src="img/sum_pot.png">
+							 <img src="img/sum_pot.png" alt="Ракушки">
 							 <span class="season_examples_name">Ракушки</span>
 						 </div>
 						 <div class="season_examples_item">
-							 <img src="img/sum_house.png">
-							 <span class="season_examples_name">Летние </br>пейзажи</span>
+							 <img src="img/sum_house.png" alt="Пейзаж">
+							 <span class="season_examples_name">Летние <br>пейзажи</span>
 						 </div>
 					 </div>
 					 <p>Если весной популярны матовые фактуры, то летом можно
@@ -111,20 +111,20 @@
 							 оттенков коричневого, красного и желтого.</p>
 						<div class="season_examples">
 							<div class="season_examples_item">
-								<img src="img/aut_fabric.png">
-								<span class="season_examples_name">Парча цвета </br>марсала</span>
+								<img src="img/aut_fabric.png" alt="Парча">
+								<span class="season_examples_name">Парча цвета <br>марсала</span>
 							</div>
 							<div class="season_examples_item">
-								<img src="img/aut_carpet.png">
-								<span class="season_examples_name">Теплый ковер </br>в коричневых оттенках</span>
+								<img src="img/aut_carpet.png" alt="Ковер">
+								<span class="season_examples_name">Теплый ковер <br>в коричневых оттенках</span>
 							</div>
 							<div class="season_examples_item">
-								<img src="img/aut_fruit.png">
-								<span class="season_examples_name">Спелые </br>фрукты</span>
+								<img src="img/aut_fruit.png" alt="Фрукты">
+								<span class="season_examples_name">Спелые <br>фрукты</span>
 							</div>
 							<div class="season_examples_item">
-								<img src="img/aut_bridge.png">
-								<span class="season_examples_name">Осенние </br>пейзажи</span>
+								<img src="img/aut_bridge.png" alt="Осень">
+								<span class="season_examples_name">Осенние <br>пейзажи</span>
 							</div>
 						</div>
 						<p>Текстиль становится тяжелее – легкие льняные портьеры стоит
@@ -151,19 +151,19 @@
 								синий, который отлично сочетается с белым и серебристым.</p>
 						 <div class="season_examples">
 							 <div class="season_examples_item">
-								 <img src="img/win_armchair.png" alt="Winter">
+								 <img src="img/win_armchair.png" alt="Синий цвет">
 								 <span class="season_examples_name">Синие портьеры</span>
 							 </div>
 							 <div class="season_examples_item">
-								 <img src="img/win_carpet.png">
+								 <img src="img/win_carpet.png" alt="Шкуры на полу">
 								 <span class="season_examples_name">Пушистый ковер, имитация шкур животных</span>
 							 </div>
 							 <div class="season_examples_item">
-								 <img src="img/win_knit.png">
-								 <span class="season_examples_name">Вязаные </br>покрывала</span>
+								 <img src="img/win_knit.png" alt="Вязание">
+								 <span class="season_examples_name">Вязаные <br>покрывала</span>
 							 </div>
 							 <div class="season_examples_item">
-								 <img src="img/win_fire.png">
+								 <img src="img/win_fire.png" alt="Камин">
 								 <span class="season_examples_name">Фальш-камин</span>
 							 </div>
 						 </div>
